base/todo-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  strategy: # remove old pods before creating new ones
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: app-cache
          persistentVolumeClaim:
            claimName: gke-dynamic-pvc
      containers:
        - name: todo-app
          image: europe-north1-docker.pkg.dev/dwk-gke-501808/docker-images/todo-app
          volumeMounts:
            - name: app-cache
              mountPath: /app/cache
              subPath: todo-app # use a subfolder inside the PV
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
