base/todo-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      targetPort: 3000
      port: 2345
